修改单元测试

--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                     <li><a href="#tabs-purchase-8">交易关闭</a></li>
                     <li><a href="#tabs-purchase-9">单笔转账</a></li>
                     <li><a href="#tabs-purchase-10">转账查询</a></li>
-                    <li><a href="#tabs-purchase-11">对账查询</a></li>
+                    <li><a href="#tabs-purchase-11">下载对账单</a></li>
                 </ul>
 
                 <div id="tabs-purchase-1">
