--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -706,7 +706,7 @@
                     <form class="api-form" asp-controller="WeChatPay" asp-action="RefundQuery" method="post" target="_blank">
                         <p>
                             <label>微信退款订单号：</label>
-                            <input type="text" name="refund_id">
+                            <input type="text" name="refund_no">
                         </p>
                         <p>
                             <label>退款订单号：</label>
@@ -714,7 +714,7 @@
                         </p>
                         <p>
                             <label>微信订单号：</label>
-                            <input type="text" name="transaction_id">
+                            <input type="text" name="trade_no">
                         </p>
                         <p>
                             <label>订单号：</label>
